 $Id: ChangeLog,v 1.131.2.25.2.26 2009/08/25 04:00:14 uehira Exp $

2009-08-01  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winadd : 64 bit clean?
	* src/evdetect.c : added. Another version of event detect.
	* Version 2.0.6 released.

2009-07-31  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/wchch : 64 bit clean
	* src/wch : 64 bit clean
	* src/wchasn : 64 bit check
	* src/win2raw : 64 bit check

2009-07-30  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/raw2mon : 64 bit clean
	* src/winlib.h : added get_mon(), compress_mon(), make_mon().

2009-03-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.19) : 
	  define_bm(lBitmap *, char, int, int, char *);	--> 
	       define_bm(lBitmap *, char, unsigned int, unsigned int, char *);
	  width_dpy,height_dpy : int --> unsigned int
	
2009-03-18  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.18) : remove unused variables.
	
2009-03-17  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.17) : make prototypes.
	
2009-03-11  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/recvstatus4.c src/ls7000_A9 : fixed bug.

2009-03-09  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/win.c (2009.3.9) : MAP mode reactivate.
	* Version 2.0.5 released.

2009-03-06  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* recvstatus4, ls7000_A8, ls7000_A9 : added.
	* src/ls8tel_STM.c, src/ls8tel_STS.c : 64 bit clean
	* Version 2.0.4 released.

2009-02-27  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.92 released.
	* configure.in : FFLAGS added "-fno-automatic -finit-local-zero"

2009-02-19  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MFH.
	* prog/win_m : do not use "-kanjifont". comment out.

2009-02-15  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* MF Version 1.1.91 released.
	* src/shmdump.c : bug fixed.

2009-01-08  Uehira Kenji  <uehira@sevo.kyushu-u.ac.jp>
	* src/winlib.h : added MKSWAPS.
	* src/recvt.c : bug fixed in send_req(). SWAPS --> MKSWAPS.